<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_weight="1" >

    <TextView
        android:id="@+id/stop_search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/stop_desc"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal" >

        <EditText
            android:id="@+id/stop_search_insert_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/stop_hint"
            android:inputType="number"
            android:singleLine="true" 
            android:layout_weight="1"/>
        
        <Button
            android:id="@+id/stop_search_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search_button"
            android:onClick="onSearchRequestFromButton" />

    </LinearLayout>

    <TextView
        android:id="@+id/stop_search_long_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/stop_long_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </LinearLayout>

</LinearLayout>