<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/line_search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/line_desc"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >
        
        <EditText
            android:id="@+id/line_search_insert_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/line_hint"
            android:singleLine="true" 
            android:inputType="textNoSuggestions"
            android:layout_weight="1"/>
        
        <Button
        	android:id="@+id/line_search_button"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:onClick="onSearchRequestFromButton"
        	android:text="@string/search_button" />
    
    </LinearLayout>
 
    <TextView
        android:id="@+id/location_search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/location_desc"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1" >
            
				<Spinner
        			android:id="@+id/location_spinner"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content"
        			android:entries="@array/locationList" />
                
                <EditText
            		android:id="@+id/location_search_insert_label"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:hint="@string/location_hint"
            		android:inputType="textNoSuggestions"
            		android:singleLine="true" />
		
        </LinearLayout>
        
        <Button
        	android:id="@+id/location_search_button"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:layout_gravity="center"
        	android:onClick="onSearchRequestFromButton"
        	android:text="@string/search_button" />
    
    </LinearLayout>
       <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" > 
        <TextView
        android:id="@+id/search_long_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/stop_long_hint" />
        </ScrollView>
</LinearLayout>